# Compressed_Domain_Video_Processing

./: README.md
cdproc/: CMakeLists.txt  cmake-ffmpeg-init.cmake
cdproc/cpp/: cdproc_mv.cpp  cdproc_py.cpp
cdproc/cpp/include/: cdproc_mv.hpp
cdproc/python/: __init__.py  detect.py  detect_shots.py  extract_features.py  features.py  io.py  plot.py  score_actionness.py
cdproc/tests/: test_cpp_binding.py  test_pipeline_smoke.py
cdproc/tests/tools/: build_module_windows.ps1  env.ps1  setup_vcpkg_windows.ps1
